<resources>
    <string name="home">選單</string>
    <string name="record">錄音</string>
    <string name="upload">上傳</string>
    <string name="open">打開</string>
    <string name="close">關閉</string>
    <string name="label">標籤</string>
    <string name="app_name">發音矯正</string>
    <string name="topic">注音類別</string>
    <string name="form_topic">個案評量表</string>
    <string name="test_info">病歷資訊</string>
    <string name="id">編號</string>
    <string name="caseid">病歷號</string>
    <string name="date">施測日期</string>
    <string name="tester">施測人員</string>
    <string name="doctor">主治醫師</string>
    <string name="case_info">個案資訊</string>
    <string name="name">姓名</string>
    <string name="birthday">生日</string>
    <string name="gender">性別</string>
    <string name="age">實足年齡</string>
    <string name="school">就讀學校</string>
    <string name="parent_info">家長資訊</string>
    <string name="parent_name">家長姓名</string>
    <string name="contact_number">連絡電話</string>
    <string name="next">開始測驗</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="wordcard">字卡</string>
    <string name="recode">錄音</string>
    <string name="play">播放</string>
    <string name="errorclass">診斷(點擊選擇)</string>
    <string name="correct">正確</string>
    <string name="store">儲存</string>
    <string name="alphabet01">ㄅ</string>
    <string name="alphabet02">ㄆ</string>
    <string name="alphabet03">ㄇ</string>
    <string name="alphabet04">ㄈ</string>
    <string name="alphabet05">ㄉ</string>
    <string name="alphabet06">ㄊ</string>
    <string name="alphabet07">ㄋ</string>
    <string name="alphabet08">ㄌ</string>
    <string name="alphabet09">ㄍ</string>
    <string name="alphabet10">ㄎ</string>
    <string name="alphabet11">ㄏ</string>
    <string name="alphabet12">ㄐ</string>
    <string name="alphabet13">ㄑ</string>
    <string name="alphabet14">ㄒ</string>
    <string name="alphabet15">ㄓ</string>
    <string name="alphabet16">ㄔ</string>
    <string name="alphabet17">ㄕ</string>
    <string name="alphabet18">ㄖ</string>
    <string name="alphabet19">ㄗ</string>
    <string name="alphabet20">ㄘ</string>
    <string name="alphabet21">ㄙ</string>
    <string name="alphabet22">ㄧ</string>
    <string name="alphabet23">ㄩ</string>
    <string name="alphabet24">ㄚ</string>
    <string name="alphabet25">ㄛ</string>
    <string name="alphabet26">ㄜ</string>
    <string name="alphabet27">ㄝ</string>
    <string name="alphabet28">ㄞ</string>
    <string name="alphabet29">ㄟ</string>
    <string name="alphabet30">ㄠ</string>
    <string name="alphabet31">ㄡ</string>
    <string name="alphabet32">ㄢ</string>
    <string name="alphabet33">ㄣ</string>
    <string name="alphabet34">ㄤ</string>
    <string name="alphabet35">ㄥ</string>
    <string name="alphabet36">ㄦ</string>
    <string name="wordcard01_1">布丁</string>
    <string name="wordcard01_2">麵包</string>
    <string name="wordcard01_3">大白菜</string>
    <string name="wordcard02_1">螃蟹</string>
    <string name="wordcard02_2">奶瓶</string>
    <string name="wordcard02_3">蓮蓬頭</string>
    <string name="wordcard03_1">帽子</string>
    <string name="wordcard03_2">玉米</string>
    <string name="wordcard03_3">捉迷藏</string>
    <string name="wordcard04_1">鳳梨</string>
    <string name="wordcard04_2">衣服</string>
    <string name="wordcard04_3">吹風機</string>
    <string name="wordcard05_1">動物</string>
    <string name="wordcard05_2">蝴蝶</string>
    <string name="wordcard05_3">看電視</string>
    <string name="wordcard06_1">太陽</string>
    <string name="wordcard06_2">枕頭</string>
    <string name="wordcard06_3">一條魚</string>
    <string name="wordcard07_1">鈕扣</string>
    <string name="wordcard07_2">電腦</string>
    <string name="wordcard07_3">喝奶昔</string>
    <string name="wordcard08_1">老虎</string>
    <string name="wordcard08_2">恐龍</string>
    <string name="wordcard08_3">養樂多</string>
    <string name="wordcard09_1">果凍</string>
    <string name="wordcard09_2">烏龜</string>
    <string name="wordcard09_3">去公園</string>
    <string name="wordcard10_1">筷子</string>
    <string name="wordcard10_2">貝殼</string>
    <string name="wordcard10_3">巧克力</string>
    <string name="wordcard11_1">漢堡</string>
    <string name="wordcard11_2">大海</string>
    <string name="wordcard11_3">救護車</string>
    <string name="wordcard12_1">膠帶</string>
    <string name="wordcard12_2">果醬</string>
    <string name="wordcard12_3">指甲刀</string>
    <string name="wordcard13_1">鉛筆</string>
    <string name="wordcard13_2">鋼琴</string>
    <string name="wordcard13_3">中秋節</string>
    <string name="wordcard14_1">信封</string>
    <string name="wordcard14_2">點心</string>
    <string name="wordcard14_3">口香糖</string>
    <string name="wordcard15_1">站牌</string>
    <string name="wordcard15_2">蠟燭</string>
    <string name="wordcard15_3">擦桌子</string>
    <string name="wordcard16_1">抽屜</string>
    <string name="wordcard16_2">警察</string>
    <string name="wordcard16_3">柳橙汁</string>
    <string name="wordcard17_1">閃電</string>
    <string name="wordcard17_2">牙刷</string>
    <string name="wordcard17_3">直升機</string>
    <string name="wordcard18_1">日歷</string>
    <string name="wordcard18_2">超人</string>
    <string name="wordcard18_3">大榕樹</string>
    <string name="wordcard19_1">走路</string>
    <string name="wordcard19_2">洗澡</string>
    <string name="wordcard19_3">水族箱</string>
    <string name="wordcard20_1">草莓</string>
    <string name="wordcard20_2">洋蔥</string>
    <string name="wordcard20_3">上廁所</string>
    <string name="wordcard21_1">掃把</string>
    <string name="wordcard21_2">垃圾</string>
    <string name="wordcard21_3">去散步</string>
    <string name="wordcard22_1">衣服</string>
    <string name="wordcard22_2">果醬</string>
    <string name="wordcard22_3">指甲刀</string>
    <string name="wordcard23_1">筷子</string>
    <string name="wordcard23_2">烏龜</string>
    <string name="wordcard23_3">去公園</string>
    <string name="wordcard24_1">杜鵑花</string>
    <string name="wordcard24_2">選擇</string>
    <string name="wordcard24_3">缺點</string>
    <string name="wordcard29_1">太陽</string>
    <string name="wordcard29_2">大海</string>
    <string name="wordcard29_3">喝奶昔</string>
    <string name="wordcard30_1">草莓</string>
    <string name="wordcard30_2">貝殼</string>
    <string name="wordcard30_3">水族箱</string>
    <string name="wordcard31_1">帽子</string>
    <string name="wordcard31_2">麵包</string>
    <string name="wordcard31_3">一條魚</string>
    <string name="wordcard32_1">鈕扣</string>
    <string name="wordcard32_2">枕頭</string>
    <string name="wordcard32_3">中秋節</string>
    <string name="wordcard33_1">漢堡</string>
    <string name="wordcard33_2">電腦</string>
    <string name="wordcard33_3">看電視</string>
    <string name="wordcard34_1">信封</string>
    <string name="wordcard34_2">鋼琴</string>
    <string name="wordcard34_3">吃點心</string>
    <string name="wordcard35_1">螃蟹</string>
    <string name="wordcard35_2">果醬</string>
    <string name="wordcard35_3">口香糖</string>
    <string name="wordcard36_1">鳳梨</string>
    <string name="wordcard36_2">奶瓶</string>
    <string name="wordcard36_3">蓮蓬頭</string>
    <string name="inference">開始分析</string>
    <string name="todo">TODO</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="average">average</string>
    <string name="textview3">TextView</string>
    <string name="name1">名稱</string>
    <string name="result_title">分析結果</string>
    <string name="_1_98">1名稱 98%</string>
    <string name="_2_98">2名稱 98%</string>
    <string name="_3_98">3名稱 98%</string>
    <string name="_2">內容2</string>
    <string name="_3">內容3</string>
    <string name="_1">內容1</string>
    <string name="Inferenceing">分析中...</string>

</resources>
