<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context="com.cgh.org.audio.Interface.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="6"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="50dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/form_topic"
                        android:textColor="@color/colorblack"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:gravity="left"
                        android:text="@string/test_info"
                        android:textColor="@color/colorblack"
                        android:textSize="17sp"
                        tools:ignore="RtlHardcoded" />

                    <EditText
                        android:id="@+id/id"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/id"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/caseid"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/caseid"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/date"
                        android:singleLine="true"
                        android:textSize="15sp"
                        android:windowSoftInputMode="stateHidden" />


                    <EditText
                        android:id="@+id/tester"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/tester"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/doctor"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/doctor"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:gravity="left"
                        android:text="@string/case_info"
                        android:textColor="@color/colorblack"
                        android:textSize="17sp"
                        tools:ignore="RtlHardcoded" />


                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_edittext"
                        android:fadeScrollbars="false"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/birthday"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="6dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_edittext"
                            android:hint="@string/birthday"
                            android:singleLine="true"
                            android:textSize="15sp"
                            android:windowSoftInputMode="stateHidden" />

                        <EditText
                            android:id="@+id/age"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginBottom="6dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_edittext"
                            android:hint="@string/age"
                            android:singleLine="true"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/school"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/school"
                        android:inputType="text"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:gravity="left"
                        android:text="@string/parent_info"
                        android:textColor="@color/colorblack"
                        android:textSize="17sp"
                        tools:ignore="RtlHardcoded" />

                    <EditText
                        android:id="@+id/parent_name"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/parent_name"
                        android:inputType="text"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/contact_number"
                        android:inputType="number"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_store"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/next" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--側邊選單-->
    <!--headerLayout：於側邊選單中的上方加入圖片、文字...-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_menu"
        app:menu="@menu/left_menu" />


</androidx.drawerlayout.widget.DrawerLayout>